--- a/templates/base.html
+++ b/templates/base.html
@@ -1,121 +1,150 @@
-
-
 <!doctype html>
+{% load static %}
 <html lang="en">
 
-{% load static %}
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="it">
+  <meta name="keywords" content="Rapoo,creative, agency, startup,onepage, clean, modern,business, company,it">
+  
+  <meta name="author" content="themefisher.com">
+
+  <title>Rapoo- It solutions &amp; Corporate template</title>
+
+  <!-- bootstrap.min css -->
+  <link rel="stylesheet" href="{% static 'resume/plugins/bootstrap/css/bootstrap.min.css' %}">
+  <!-- Animate Css -->
+  <link rel="stylesheet" href="{% static 'resume/plugins/animate-css/animate.css' %}">
+  <!-- Icon Font css -->
+  <link rel="stylesheet" href="{% static 'resume/plugins/fontawesome/css/all.css' %}">
+  <link rel="stylesheet" href="{% static 'resume/plugins/fonts/Pe-icon-7-stroke.css' %}">
+  <!-- Themify icon Css -->
+  <link rel="stylesheet" href="{% static 'resume/plugins/themify/css/themify-icons.css' %}">
+  <!-- Slick Carousel CSS -->
+  <link rel="stylesheet" href="{% static 'resume/plugins/slick-carousel/slick/slick.css' %}">
+  <link rel="stylesheet" href="{% static 'resume/plugins/slick-carousel/slick/slick-theme.css' %}">
+
+  <!-- Main Stylesheet -->
+  <link rel="stylesheet" href="{% static 'resume/css/style.css' %}">
+<link rel="stylesheet" href="{% static 'resume/css/forminput.css' %}"
 
 
-
-
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    {% block css %}
-
+  {% block css %}
     
-    {% endblock css %}  
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      
-      body {
-        background-color: #f1f1f1;
-      }
-      
-      #regForm {
-        background-color: #ffffff;
-        margin: 100px auto;
-        font-family: Raleway;
-        padding: 40px;
-        width: 70%;
-        min-width: 300px;
-      }
-      
-      h1 {
-        text-align: center;  
-      }
-      
-      input {
-        padding: 10px;
-        width: 100%;
-        font-size: 17px;
-        font-family: Raleway;
-        border: 1px solid #aaaaaa;
-      }
-      
-      /* Mark input boxes that gets an error on validation: */
-      input.invalid {
-        background-color: #ffdddd;
-      }
-      
-      /* Hide all steps by default: */
-      .tab {
-        display: none;
-      }
-      
-      button {
-        background-color: #04AA6D;
-        color: #ffffff;
-        border: none;
-        padding: 10px 20px;
-        font-size: 17px;
-        font-family: Raleway;
-        cursor: pointer;
-      }
-      
-      button:hover {
-        opacity: 0.8;
-      }
-      
-      #prevBtn {
-        background-color: #bbbbbb;
-      }
-      
-      /* Make circles that indicate the steps of the form: */
-      .step {
-        height: 15px;
-        width: 15px;
-        margin: 0 2px;
-        background-color: #bbbbbb;
-        border: none;  
-        border-radius: 50%;
-        display: inline-block;
-        opacity: 0.5;
-      }
-      
-      .step.active {
-        opacity: 1;
-      }
-      
-      /* Mark the steps that are finished and valid: */
-      .step.finish {
-        background-color: #04AA6D;
-      }
-      </style>
+  {% endblock css %}
 </head>
-  <body>
-       
-    {% include "navbar.html"%}
-    {% block main %}
+
+
+<body id="top-header">
+{% include 'navbar.html' %}
+
+  {% block main %}
     
+  {% endblock main %}
+  <footer class="section " id="footer">
+    <div class="overlay footer-overlay"></div>
+    <!--Content -->
+    <div class="container">
+        <div class="row justify-content-start">
+            <div class="col-lg-4 col-sm-12">
+                <div class="footer-widget">
+                    <!-- Brand -->
+                    <a href="#" class="footer-brand text-white">
+                        Rapoo
+                    </a>
+                    <p>Each theme featured at the Bootstrap marketplace has been reviewed by Bootstrap's creators.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+
+            <div class="col-lg-3 ml-lg-auto col-sm-12">
+                <div class="footer-widget">
+                    <h3>Account</h3>
+                    <!-- Links -->
+                    <ul class="footer-links ">
+                        <li>
+                            <a href="#">
+                                Terms and conditions
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Privacy policy
+                            </a>
+                        </li>
+                      
+                    </ul>
+                </div>
+            </div>
+
+
+            <div class="col-lg-2 col-sm-6">
+                <div class="footer-widget">
+                    <h3>About</h3>
+                    <!-- Links -->
+                    <ul class="footer-links ">
+                        <li>
+                            <a href="#">
+                                Services
+                            </a>
+                        </li>
         
-    {% endblock main %}
-      
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+                 
+                        <li>
+                            <a href="#">
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-lg-2 col-sm-6">
+                <div class="footer-widget">
+                    <h3>Socials</h3>
+                    <!-- Links -->
+                    <ul class="list-unstyled footer-links">
+                        <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+                        <li>
+                        <a href="#"><i class="fab fa-twitter"></i>Twitter
+                        </a></li>
+                  
+                    </ul>
+                </div>
+            </div>
+        </div> <!-- / .row -->
+
+
+        <div class="row text-right pt-5">
+            <div class="col-lg-12">
+                <!-- Copyright -->
+                <p class="footer-copy ">
+                    &copy; Copyright <span class="current-year">resumeMaker</span> All rights reserved.
+                </p>
+            </div>
+        </div> <!-- / .row -->
+    </div> <!-- / .container -->
+</footer>
+
+
+  
+    
+    <!-- Main jQuery -->
+    <script src="{% static 'resume/plugins/jquery/jquery.min.js' %}"></script>
+    <!-- Bootstrap 3.1 -->
+    <script src="{% static 'resume/plugins/bootstrap/js/popper.min.js' %}"></script>
+    <script src="{% static 'resume/plugins/bootstrap/js/bootstrap.min.js' %}"></script>
+    <!-- Slick Slider -->
+    <script src="{% static 'resume/plugins/slick-carousel/slick/slick.min.js' %}"></script>
+    <!-- Map Js -->
+    <script src="{% static 'resume/plugins/google-map/gmap3.min.js' %}"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwIQh7LGryQdDDi-A603lR8NqiF3R_ycA"></script>
+    <script src="{% static 'resume/js/theme.js' %}"></script>
 
     {% block js %}
-        
+      
     {% endblock js %}
-</body>
-</html>
+
+  </body>
+  </html>
