--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,17 +1,51 @@
-<!-- Navigation-->
-<nav class="navbar navbar-expand-lg bg-dark text-uppercase fixed-top" id="mainNav">
-    <div class="container">
-        <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
-        <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menu
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded text-light" href="#portfolio">Portfolio</a></li>
-                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded text-light" href="#about">About</a></li>
-                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded text-light" href="#contact">Contact</a></li>
-            </ul>
-        </div>
+
+    <!-- NAVBAR
+    ================================================= -->
+    <div class="main-navigation mt-4" id="mainmenu-area">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav navbar-togglable rounded-radius">
+
+                <a class="navbar-brand d-lg-none d-block" href="">
+                    <h4>Rapoo</h4>
+                </a>
+                <!-- Toggler -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="fa fa-bars"></span>
+                </button>
+
+                <!-- Collapse -->
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <!-- Links -->
+                    <ul class="navbar-nav ">
+                        <li class="nav-item">
+                            <a class="nav-link"  id="navbarWelcome" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Home
+                            </a>
+                           
+                        </li>
+                        <li class="nav-item ">
+                            <a href="about.html" class="nav-link js-scroll-trigger">
+                                About
+                            </a>
+                        </li>
+                        <li class="nav-item ">
+                            <a href="service.html" class="nav-link js-scroll-trigger">
+                                resume templates
+                            </a>
+                        </li>
+                    
+                        <li class="nav-item ">
+                            <a href="contact.html" class="nav-link">
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
+
+                    <ul class="ml-lg-auto list-unstyled m-0">
+                        <li><a href="#" class="btn btn-white btn-circled" data-toggle="modal" data-target="#exampleModalCenter" >Create Resume Now</a></li>
+                    </ul>
+                </div> <!-- / .navbar-collapse -->
+            </nav>
+        </div> <!-- / .container -->
     </div>
-</nav>
+
