--- a/templates/resume/fresher.html
+++ b/templates/resume/fresher.html
@@ -8,13 +8,55 @@
 
 <form id="regForm" method="post">
   {% csrf_token %}
-  <h1>Register:</h1>
+  <!-- <h1>Register:</h1> -->
   <!-- One "tab" for each step in the form: -->
-  <div class="tab">Name:
+  <div class="tab">Resume Details:
    
         {{form1.as_p}}
     
   </div>
+  <div class="tab"><h4>Signup:</h4>
+          <span class="login100-form-title p-b-32">
+            
+      </span>
+
+      <span class="txt1 p-b-11">
+      Username
+      </span>
+      <div class="wrap-input100 validate-input m-b-36" data-validate = "Username is required">
+      <input class="input100" type="text" name="username">
+      <span class="focus-input100"></span>
+      </div>
+
+      <span class="txt1 p-b-11">
+      Email
+      </span>
+      <div class="wrap-input100 validate-input m-b-36" data-validate = "Email is required">
+      <input class="input100" type="text" name="email">
+      <span class="focus-input100"></span>
+      </div>
+
+      <span class="txt1 p-b-11">
+      Password
+      </span>
+      <div class="wrap-input100 validate-input m-b-12" data-validate = "Password is required">
+      <span class="btn-show-pass">
+      </span>
+      <input id="id_password1" class="input100" type="password" name="password1">
+      <span class="focus-input100"></span>
+      </div>
+
+      <span class="txt1 p-b-11">
+      Confirm Password
+      </span>
+      <div class="wrap-input100 validate-input m-b-12" data-validate = "Confirm password is required">
+      <span class="btn-show-pass">
+      </span>
+      <input id="id_password2" class="input100" type="password" name="password2">
+      <span class="focus-input100"></span>
+      </div>
+   </div>
+   <br>
   <div class="tab"><h4>Enter general Information:</h4>
    {{ form2.as_p}}
   </div>
@@ -50,6 +92,7 @@
   </div>
   <!-- Circles which indicates the steps of the form: -->
   <div style="text-align:center;margin-top:40px;">
+    <span class="step"></span>
     <span class="step"></span>
     <span class="step"></span>
     <span class="step"></span>
