--- a/templates/resume/fresher.html
+++ b/templates/resume/fresher.html
@@ -6,15 +6,21 @@
     {% block main %}
 
 
-<form id="regForm" method="post">
+<form id="regForm" method="post" action="{% url 'fresher_input' %}">
   {% csrf_token %}
-  <h1>Register:</h1>
+  <h1>Resume Form:</h1>
   <!-- One "tab" for each step in the form: -->
-  <div class="tab">Name:
+  <div class="tab">Enter your Resume Name:
    
-        {{form1.as_p}}
+        {{form.as_p}}
     
   </div>
+  <div class="tab">Your basic Details :
+   
+    {{form1.as_p}}
+
+</div>
+
   <div class="tab"><h4>Enter general Information:</h4>
    {{ form2.as_p}}
   </div>
@@ -31,15 +37,16 @@
   </div>
   <div class="tab"><h4>Enter  Your Skills and Hobbies:</h4>
     {{ form4.as_p}}
-    {{ form6.as_p}}
+    {{ form5.as_p}}
+
 
   </div>
   <div class="tab"><h4>Enter  Your Certificate Details:</h4>
-    {{ form7.as_p}}
+    {{ form6.as_p}}
 
   </div>
   <div class="tab"><h4>Enter  Your  Achievements:</h4>
-    {{ form8.as_p}}
+    {{ form7.as_p}}
 
   </div>
   <div style="overflow:auto;">
