--- a/templates/resume/template5.html
+++ b/templates/resume/template5.html
@@ -26,7 +26,8 @@
 
 				<div class="yui-u">
 					<div class="contact-info">
-						<img src="/static/images/profile.jpg" alt="Italian Trulli" width="100px">
+						<!-- <img src="/static/images/profile.jpg" alt="Italian Trulli" width="100px"> -->
+						<img src="{{resume.userextrafields_set.all.first.photo.url}}" width="100px">
 						<!-- <h3><a id="pdf" href="#">Download PDF</a></h3>
 						<h3><a href="mailto:name@yourdomain.com">name@yourdomain.com</a></h3>
 						<h3>(313) - 867-5309</h3> -->
