--- a/templates/resume/fresher.html
+++ b/templates/resume/fresher.html
@@ -25,21 +25,35 @@
     
   </div>
 
-  <div class="tab"><h4>Enter general Information:</h4>
-    {{form1.as_p}}
-   {{ form2.as_p}}
-  </div>
   <div class="tab"><h4>Enter About Your Education:</h4>
+
+    {{ form3.management_form }}
+<div id="form_set">
+    {% for form in form3.forms %}
+	    {{form.non_field_errors}}
+		{{form.errors}}
+        
+            {{ form }}
+        
+    {% endfor %}
+</div>
+<hr>
+<div id="empty_form" style="display:none">
+    
+        {{ form3.empty_form }}
+
+</div>
+<input type="button" value="Add More" id="add_more">
+
      
-    <div id="form_set">
+    <!-- <div class="form_set">
       {{ form3.management_form }}
       {% for form_set in form3 %}
-          <table class='no_error'>
-              {{ form_set.as_p }}
-          </table>
+      <div class="link-formset">
+        {{ form_set.as_p }}
+      </div>
       {% endfor %}
-  </div>
-  <input type="button" value="Add More" id="add_more">
+  </div> -->
   <!-- <div id="empty_form" style="display:none">
       <table class='no_error'>
           {{ form3.empty_form.as_p }}
@@ -49,6 +63,12 @@
    -->
 
   </div>
+
+  <div class="tab"><h4>Enter general Information:</h4>
+    {{form1.as_p}}
+   {{ form2.as_p}}
+  </div>
+
   <div class="tab"><h4>Enter  Your Skills and Hobbies:</h4>
     <ul id="fieldListskills">
       <li>
@@ -142,13 +162,7 @@ function validateForm() {
   y = x[currentTab].getElementsByTagName("input");
   // A loop that checks every input field in the current tab:
   for (i = 0; i < y.length; i++) {
-    // If a field is empty...
-    if (y[i].value == "") {
-      // add an "invalid" class to the field:
-      y[i].className += " invalid";
-      // and set the current valid status to false
-      valid = false;
-    }
+    
   }
   // If the valid status is true, mark the step as finished and valid:
   if (valid) {
@@ -172,13 +186,13 @@ $(document).on('click', '.add-form-row', function(e){
   cloneMore('.form-row:last', 'form');
   return false;
 });
+
+$('#add_more').click(function() {
+	var form_idx = $('#id_form-TOTAL_FORMS').val();
+	$('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
+	$('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+});
+
 </script>
 
-<script>
-  $('#add_more').click(function() {
-      var form_idx = $('#id_form-TOTAL_FORMS').val();
-      $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
-      $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
-  });
-</script>
 {% endblock js %}
