--- a/templates/resume/experience.html
+++ b/templates/resume/experience.html
@@ -1,143 +1,221 @@
 {% extends "base.html" %}
-{% load static %}
 {% block css %}
-  <link rel="stylesheet" href="{% static 'css/input-form.css' %}">
+    
 {% endblock css %}
 
+    {% block main %}
 
-{% block main %}
-
-<section style=" margin-top:150px">
-  <div class="container">
-    
+<style type="text/css">
+#regForm {
+    background-color: #ffffff;
+    margin: 100px auto;
+    font-family: Raleway;
+    padding: 40px;
+    width: 83%;
+    min-width: 300px;
+}  
+</style>
+<form id="regForm" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  <h1>Resume Form</h1>
+  <!-- One "tab" for each step in the form: -->
+  <div class="tab">
    
-      
-      <form id="regForm" action="/action_page.php">
-        <h1>Resume Form</h1>
-        <!-- One "tab" for each step in the form: -->
-  
-        <div class="tab">Resume For :
-          <p><input type="text" placeholder="enter resume title..." oninput="this.className = ''" name="title"></p>
-          <p><input  type="text" placeholder="Description..." oninput="this.className = ''" name="description"></p>
-        </div>
-        <div class="tab">Contact Info:
-          <p><input placeholder="E-mail..." oninput="this.className = ''" name="email"></p>
-          <p><input placeholder="Phone..." oninput="this.className = ''" name="phone"></p>
-        </div>
-        <div class="tab">Birthday:
-          <p><input placeholder="dd" oninput="this.className = ''" name="dd"></p>
-          <p><input placeholder="mm" oninput="this.className = ''" name="nn"></p>
-          <p><input placeholder="yyyy" oninput="this.className = ''" name="yyyy"></p>
-        </div>
-        <div class="tab">Login Info:
-          <p><input placeholder="Username..." oninput="this.className = ''" name="uname"></p>
-          <p><input placeholder="Password..." oninput="this.className = ''" name="pword" type="password"></p>
-        </div>
-        <div style="overflow:auto;">
-          <div style="float:right;">
-            <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-            <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
-          </div>
-        </div>
-        <!-- Circles which indicates the steps of the form: -->
-        <div style="text-align:center;margin-top:40px;">
-          <span class="step"></span>
-          <span class="step"></span>
-          <span class="step"></span>
-          <span class="step"></span>
-        </div>
-      </form>
-      
+   {{form.as_p}}
+    
+  </div>
+
+  <div class="tab"><h4>Enter About Your Education:</h4>
+
+    {{ form3.management_form }}
+<div id="form_set">
+    {% for form in form3.forms %}
+	    {{form.non_field_errors}}
+		{{form.errors}}
+        
+            {{ form }}
+        
+    {% endfor %}
+</div>
+<hr>
+<div id="empty_form" style="display:none">
+    
+        {{ form3.empty_form }}
+
+</div>
+<input type="button" value="Add More" id="add_more">
+
+     
+    <!-- <div class="form_set">
+      {{ form3.management_form }}
+      {% for form_set in form3 %}
+      <div class="link-formset">
+        {{ form_set.as_p }}
+      </div>
+      {% endfor %}
+  </div> -->
+  <!-- <div id="empty_form" style="display:none">
+      <table class='no_error'>
+          {{ form3.empty_form.as_p }}
+      </table>
+  </div>
+
+   -->
 
   </div>
-</section>
-        <!-- Footer-->
-        <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Company Name</div></div>
-        </footer>
+
+  <div class="tab"><h4>Enter general Information:</h4>
+    {{form1.as_p}}
+   {{ form2.as_p}}
+  </div>
+
+  <div class="tab"><h4>Enter  Your Skills and Hobbies:</h4>
+    
+
+    {{ form4.management_form }}
+    <div id="skills-form_set">
+        {% for form in form4.forms %}
+          {{form.non_field_errors}}
+        {{form.errors}}
+            
+                {{ form }}
+            
+        {% endfor %}
+    </div>
+    <hr>
+    <div id="empty_form4" style="display:none">
+        
+            {{ form4.empty_form }}
+    
+    </div>
+    <input type="button" value="Add More" id="add_more-skills">
+    
+        
+
+        {{ form5.as_p}}
+    
+      <hr>
+     
+   
+
+   
+  </div>
+  <div class="tab"><h4>Enter  Your Certificate and Achievements Details:</h4>
+    {{ form6.as_p}}
+    {{ form7.as_p}}
+  </div>
+ 
+  <div style="overflow:auto;">
+    <div style="float:right;">
+      <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+      <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+    </div>
+  </div>
+  <!-- Circles which indicates the steps of the form: -->
+  <div style="text-align:center;margin-top:40px;">
+    <span class="step"></span>
+    <span class="step"></span>
+    <span class="step"></span>
+    <span class="step"></span>
+    <span class="step"></span>
+
+
+
+
+  </div>
+</form>
     
 {% endblock main %}
 
 {% block js %}
-  <!-- <script src="{% static 'js/main.js' %}" type="text/javascript"></script> -->
-  <script>
-    var currentTab = 0; // Current tab is set to be the first tab (0)
-    showTab(currentTab); // Display the current tab
     
-    function showTab(n) {
-      // This function will display the specified tab of the form...
-      var x = document.getElementsByClassName("tab");
-      x[n].style.display = "block";
-      //... and fix the Previous/Next buttons:
-      if (n == 0) {
-        document.getElementById("prevBtn").style.display = "none";
-      } else {
-        document.getElementById("prevBtn").style.display = "inline";
-      }
-      if (n == (x.length - 1)) {
-        document.getElementById("nextBtn").innerHTML = "Submit";
-      } else {
-        document.getElementById("nextBtn").innerHTML = "Next";
-      }
-      //... and run a function that will display the correct step indicator:
-      fixStepIndicator(n)
-    }
+<script>
+var currentTab = 0; // Current tab is set to be the first tab (0)
+showTab(currentTab); // Display the current tab
+
+function showTab(n) {
+  // This function will display the specified tab of the form...
+  var x = document.getElementsByClassName("tab");
+  x[n].style.display = "block";
+  //... and fix the Previous/Next buttons:
+  if (n == 0) {
+    document.getElementById("prevBtn").style.display = "none";
+  } else {
+    document.getElementById("prevBtn").style.display = "inline";
+  }
+  if (n == (x.length - 1)) {
+    document.getElementById("nextBtn").innerHTML = "Submit";
+  } else {
+    document.getElementById("nextBtn").innerHTML = "Next";
+  }
+  //... and run a function that will display the correct step indicator:
+  fixStepIndicator(n)
+}
+
+function nextPrev(n) {
+  // This function will figure out which tab to display
+  var x = document.getElementsByClassName("tab");
+  // Exit the function if any field in the current tab is invalid:
+  if (n == 1 && !validateForm()) return false;
+  // Hide the current tab:
+  x[currentTab].style.display = "none";
+  // Increase or decrease the current tab by 1:
+  currentTab = currentTab + n;
+  // if you have reached the end of the form...
+  if (currentTab >= x.length) {
+    // ... the form gets submitted:
+    document.getElementById("regForm").submit();
+    return false;
+  }
+  // Otherwise, display the correct tab:
+  showTab(currentTab);
+}
+
+function validateForm() {
+  // This function deals with validation of the form fields
+  var x, y, i, valid = true;
+  x = document.getElementsByClassName("tab");
+  y = x[currentTab].getElementsByTagName("input");
+  // A loop that checks every input field in the current tab:
+  for (i = 0; i < y.length; i++) {
     
-    function nextPrev(n) {
-      // This function will figure out which tab to display
-      var x = document.getElementsByClassName("tab");
-      // Exit the function if any field in the current tab is invalid:
-      if (n == 1 && !validateForm()) return false;
-      // Hide the current tab:
-      x[currentTab].style.display = "none";
-      // Increase or decrease the current tab by 1:
-      currentTab = currentTab + n;
-      // if you have reached the end of the form...
-      if (currentTab >= x.length) {
-        // ... the form gets submitted:
-        document.getElementById("regForm").submit();
-        return false;
-      }
-      // Otherwise, display the correct tab:
-      showTab(currentTab);
-    }
-    
-    function validateForm() {
-      // This function deals with validation of the form fields
-      var x, y, i, valid = true;
-      x = document.getElementsByClassName("tab");
-      y = x[currentTab].getElementsByTagName("input");
-      // A loop that checks every input field in the current tab:
-      for (i = 0; i < y.length; i++) {
-        // If a field is empty...
-        if (y[i].value == "") {
-          // add an "invalid" class to the field:
-          y[i].className += " invalid";
-          // and set the current valid status to false
-          valid = false;
-        }
-      }
-      // If the valid status is true, mark the step as finished and valid:
-      if (valid) {
-        document.getElementsByClassName("step")[currentTab].className += " finish";
-      }
-      return valid; // return the valid status
-    }
-    
-    function fixStepIndicator(n) {
-      // This function removes the "active" class of all steps...
-      var i, x = document.getElementsByClassName("step");
-      for (i = 0; i < x.length; i++) {
-        x[i].className = x[i].className.replace(" active", "");
-      }
-      //... and adds the "active" class on the current step:
-      x[n].className += " active";
-    }
-    </script>
-    
+  }
+  // If the valid status is true, mark the step as finished and valid:
+  if (valid) {
+    document.getElementsByClassName("step")[currentTab].className += " finish";
+  }
+  return valid; // return the valid status
+}
+
+function fixStepIndicator(n) {
+  // This function removes the "active" class of all steps...
+  var i, x = document.getElementsByClassName("step");
+  for (i = 0; i < x.length; i++) {
+    x[i].className = x[i].className.replace(" active", "");
+  }
+  //... and adds the "active" class on the current step:
+  x[n].className += " active";
+}
+
+$(document).on('click', '.add-form-row', function(e){
+  e.preventDefault();
+  cloneMore('.form-row:last', 'form');
+  return false;
+});
+
+$('#add_more').click(function() {
+	var form_idx = $('#id_form-TOTAL_FORMS').val();
+	$('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
+	$('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+});
+
+$('#add_more-skills').click(function() {
+	var form_idx = $('#id_form-TOTAL_FORMS').val();
+	$('#skills-form_set').append($('#empty_form4').html().replace(/__prefix__/g, form_idx));
+	$('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+});
+
+
+</script>
 
 {% endblock js %}
-
-
-
-
