--- a/templates/resume/sign_in.html
+++ b/templates/resume/sign_in.html
@@ -50,8 +50,8 @@
    <div class="line-break">
    </div>
    <!-- <a href="{% url 'home' %}">submit</a> -->
-   <input id="login" type="submit" value="Singin"/>
-   Don't have an account? <a href="">Sign Up</a>
+   <input id="login" type="submit" value="Signin"/>
+   Don't have an account? <a href="{% url 'sign_up' %}">Sign Up</a>
   </form>
   <!-- partial -->
   <script src='static/script.js'>
