--- a/templates/resume/template2.html
+++ b/templates/resume/template2.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  {% load static %}
   <head>
     <title>Document</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="{%  static  'css/style.css'  %}" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
@@ -14,6 +15,257 @@
       referrerpolicy="no-referrer"
     />
   </head>
+  <style type="text/css">
+
+/* @page { size:420mm 594mm; margin: 2cm } */
+/* @page {
+  size: A4;
+  margin: 0 0 0 0;
+} */
+  @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  background: lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 1000px;
+  min-height: 1000px;
+  background: #fff;
+  margin: 50px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1);
+
+}
+.container .left_side {
+  position: relative;
+  background: #003147;
+  padding: 40px;
+}
+.profileText
+{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+.profileText .imgBx
+{
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius:50%;
+  overflow: hidden;
+}
+.profileText .imgBx img
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.profileText h2
+{
+  color: #fff;
+  font-size: 1.5em;
+  margin-top: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight:600;
+  line-height: 1.4em;
+}
+.profileText h2 span
+{
+  font-size:0.8em;
+  font-weight:300;
+}
+
+.contactInfo
+{
+  padding: 40px;
+}
+.title
+{
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing:1px;
+  margin-bottom: 20px;
+}
+.contactInfo ul
+{
+  position: relative;
+}
+.contactInfo ul li
+{
+  position: relative;
+  list-style: none;
+  margin: 10px 0;
+  cursor: pointer;
+}
+.contactInfo ul li .icon
+{
+  display: inline-block;
+  width :30px;
+  font-size: 18px;
+  color:#03a9f4;
+}
+.contactInfo ul li span
+{
+  color: #fff;
+  font-weight: 300;
+}
+.contactInfo.education li
+{
+  margin-bottom: 15px;
+}
+.contactInfo.education h5
+{
+  color:#03a9f4;
+  font-weight: 500;
+
+}
+.contactInfo.education h4:nth-child()
+{
+  color:#fff;
+  font-weight: 500;
+}
+.contactInfo.education h4
+{
+  color:#fff;
+  font-weight: 300;
+}
+.contactInfo.language .percent
+{
+  position: relative;
+  width: 100%;
+  height: 6px;
+  background: #081921;
+  display: block;
+  margin-top: 5px;
+}
+.contactInfo.language .percent div
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #03a9f4;
+}
+
+.container .right_side {
+  position: relative;
+  background: #fff;
+  padding: 40px;
+}
+.about
+{
+  margin-bottom: 50p;
+}
+.about:last-child
+{
+  margin-bottom:0;
+}
+.title2
+{
+  color: #003147;
+  text-transform: uppercase;
+  letter-spacing:1px;
+  margin-bottom: 10px;
+}
+p
+{
+  color: #333;
+}
+.about .box
+{
+  display: flex;
+  flex-direction: row;
+  margin: 20px 0;
+}
+.about .box .year_company
+{
+  min-width: 150px;
+}
+.about .box .year_company h5
+{
+  text-transform: uppercase;
+  color: #848c90;
+  font-weight: 600;
+
+}
+.about .box .text h4 
+{
+  text-transform: uppercase;
+  color: #2a7da2;
+  font-size: 16px;
+}
+.skills .box
+{
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  justify-content:center;
+  align-items:center;
+
+}
+.skills .box h4
+{
+  text-transform: uppercase;
+  color: #848c99;
+  font-weight: 500;
+}
+.skills .box  .percent 
+{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #f0f0f0;
+}
+.skills .box .percent div
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #03a9f4;
+}
+.hobby ul
+{ 
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+}
+.hobby ul li
+{
+  list-style: none;
+  color: #333;
+  font-weight: 500;
+  margin: 10px 0;
+}
+.hobby ul li .fa
+{
+  color:  #03a9f4;
+  font-size:18px ;
+  width : 20px
+
+} 
+  </style>
   <body>
     <div class="container">
       <div class="left_side">
@@ -210,6 +462,14 @@
           </p>
         </div>
       </div>
+      <form action='#' method='post'>
+        {% if csrf_token %}{% csrf_token %}{% endif %}
+        
+        <center class='{{ pdfcrowd_remove }}'>
+            <input type='submit' value='Convert to PDF' name='asAttachment'>
+            <input type='submit' value='Convert to PDF and open' name='asInline'>
+        </center>
+    </form>
     </div>
   </body>
 </html>
