--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,8 @@
 
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="{% static 'resume/css/style.css' %}">
-<link rel="stylesheet" href="{% static 'resume/css/forminput.css' %}"
+    <link rel="stylesheet" href="{% static 'resume/css/forminput.css' %}">
+  
 
 
   {% block css %}
@@ -38,7 +39,7 @@
 
 
 <body id="top-header">
-{% include 'navbar.html' %}
+
 
   {% block main %}
     
