--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% endblock css %}
 
 {% block main %}
-    
+{% include 'navbar.html' %}
 
     <div class="top-bar bg-dark " id="top-bar">
         <div class="container">
