update laest code

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block css %}
-    
+    <style>
+         html{
+             scroll-behavior: smooth;
+         }
+    </style>
 {% endblock css %}
 
 {% block main %}
@@ -49,7 +53,7 @@
 
                         <!-- Button -->
                         <p class="mb-0">
-                            <a href="#" target="_blank" class="btn btn-primary btn-circled" data-toggle="modal" data-target="#exampleModalCenter">
+                            <a href="#services-2" class="btn btn-primary btn-circled">
                                 Create Resume Now
                             </a>
                         </p>
@@ -57,7 +61,7 @@
                         <!-- ------ -->
                     
         
-                        <!-- Modal -->
+                        <!-- Modal
                         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
                             aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -82,7 +86,7 @@
                                 </div>
                             </div>
                         </div>
-
+ -->
 
 
                     </div>
@@ -161,6 +165,93 @@
                     <div class="service-content">
                         <h1>Get a better deal and start saving money today</h1>
                         <p>We compare hundreds of leading products and plans across many categories to bring you the best value for money.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="section" id="services-2">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6 text-center">
+                    <div class="section-heading">
+                        <!-- Heading -->
+                        <h2 class="section-title mb-2 text-white">
+                            Web Services
+                        </h2>
+
+                        <!-- Subheading -->
+                        <p class="mb-5 text-white">
+                            Rapoo can be used to create anything from a small marketing page to a sophisticated website.
+                        </p>
+                    </div>
+                </div>
+            </div> <!-- / .row -->
+
+
+
+
+
+
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
+
+                    <form class="form">
+
+                    
+                
+                    <div class="form-group">
+                    
+                    <input type="hidden" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
+                     
+          
+                    <div class="web-service-block">
+                        <i class="ti-light-bulb"></i>
+                        <h3>Creative Design</h3>
+                        <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
+                    </div>
+
+
+                </div>
+                    
+                </div>
+                <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
+                    <div class="web-service-block">
+                        <i class="ti-desktop"></i>
+                        <h3>Web Development</h3>
+                        <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
+                    <div class="web-service-block">
+                        <i class="ti-announcement"></i>
+                        <h3>Digital Marketing</h3>
+                        <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-sm-6 col-md-6 ">
+                    <div class="web-service-block">
+                        <i class="ti-layers-alt"></i>
+                        <h3>Graphic Design</h3>
+                        <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-md-6 ">
+                    <div class="web-service-block">
+                        <i class="ti-mobile"></i>
+                        <h3>App Development</h3>
+                        <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 col-md-6 ">
+                    <div class="web-service-block">
+                        <i class="ti-settings"></i>
+                        <h3>Wordpress Installation</h3>
+                        <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
                     </div>
                 </div>
             </div>
