--- a/templates/resume/experience.html
+++ b/templates/resume/experience.html
@@ -21,9 +21,14 @@
   <!-- One "tab" for each step in the form: -->
   <div class="tab">
    
-   {{form.as_p}}
+   {{form1.as_p}}
     
   </div>
+  <div class="tab"> <h4>Enter general Information:</h4>
+   
+    {{form2.as_p}}
+     
+   </div>
 
   <div class="tab"><h4>Enter About Your Education:</h4>
 
@@ -45,36 +50,30 @@
 </div>
 <input type="button" value="Add More" id="add_more">
 
-     
-    <!-- <div class="form_set">
-      {{ form3.management_form }}
-      {% for form_set in form3 %}
-      <div class="link-formset">
-        {{ form_set.as_p }}
-      </div>
-      {% endfor %}
-  </div> -->
-  <!-- <div id="empty_form" style="display:none">
-      <table class='no_error'>
-          {{ form3.empty_form.as_p }}
-      </table>
+   
+
+   
+   
   </div>
 
-   -->
-
+  <div class="tab"><h4>Enter About Your Experience:</h4>
+  
+  
+   {{ form4.as_p}}
   </div>
 
-  <div class="tab"><h4>Enter general Information:</h4>
-    {{form1.as_p}}
-   {{ form2.as_p}}
-  </div>
+  <div class="tab"><h4>Enter About Your Working projects:</h4>
+  
+  
+    {{ form5.as_p}}
+   </div>
+ 
 
   <div class="tab"><h4>Enter  Your Skills and Hobbies:</h4>
-    
 
-    {{ form4.management_form }}
-    <div id="skills-form_set">
-        {% for form in form4.forms %}
+    {{ form6.management_form }}
+    <div id="form_set6">
+        {% for form in form6.forms %}
           {{form.non_field_errors}}
         {{form.errors}}
             
@@ -83,26 +82,29 @@
         {% endfor %}
     </div>
     <hr>
-    <div id="empty_form4" style="display:none">
+    <div id="empty_form6" style="display:none">
         
-            {{ form4.empty_form }}
+            {{ form6.empty_form }}
     
     </div>
-    <input type="button" value="Add More" id="add_more-skills">
-    
-        
+    <input type="button" value="Add More" id="add_more6">
+    <ul id="fieldListskills">
+      <li>
+        <!-- {{ form4.as_p}} -->
+        {{ form7.as_p}}
+      </li>
 
-        {{ form5.as_p}}
-    
       <hr>
      
-   
+    </ul>
 
-   
+    <div id ="more-skills-hobbies"></div>
+    <button id="addMore-skills">Add another Skills and Hobbies</button>
+
   </div>
   <div class="tab"><h4>Enter  Your Certificate and Achievements Details:</h4>
-    {{ form6.as_p}}
-    {{ form7.as_p}}
+    {{ form8.as_p}}
+    {{ form9.as_p}}
   </div>
  
   <div style="overflow:auto;">
@@ -113,6 +115,7 @@
   </div>
   <!-- Circles which indicates the steps of the form: -->
   <div style="text-align:center;margin-top:40px;">
+    <span class="step"></span>
     <span class="step"></span>
     <span class="step"></span>
     <span class="step"></span>
@@ -203,18 +206,46 @@ $(document).on('click', '.add-form-row', function(e){
   return false;
 });
 
-$('#add_more').click(function() {
-	var form_idx = $('#id_form-TOTAL_FORMS').val();
-	$('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
-	$('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
-});
 
-$('#add_more-skills').click(function() {
-	var form_idx = $('#id_form-TOTAL_FORMS').val();
-	$('#skills-form_set').append($('#empty_form4').html().replace(/__prefix__/g, form_idx));
-	$('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
-});
+  
+  $('#add_more').click(function() {
+    var form_idx = $('#id_form-TOTAL_FORMS').val();
+    console.log('Element', $('#id_form-TOTAL_FORMS'), 'Num of forms', form_idx);
 
+    $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
+    $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+    console.log('Element', $('#id_form-TOTAL_FORMS'));
+
+    if ($("#form_set input").length === 0){
+      $("#add_more").trigger("click");
+  }
+
+  
+
+  });
+  
+  
+  
+
+  $('#add_more6').click(function() {
+    var form_idx = $('#id_form-TOTAL_FORMS').val();
+    console.log('Element', $('#id_form-TOTAL_FORMS'), 'Num of forms', form_idx);
+
+    $('#form_set6').append($('#empty_form6').html().replace(/__prefix__/g, form_idx));
+    $('#id_skills-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+    console.log('Element', $('#id_form-TOTAL_FORMS'));
+
+    if ($("#form_set6 input").length === 0){
+      $("#add_more6").trigger("click");
+  }
+
+
+  });
+  
+
+
+
+  
 
 </script>
 
