--- a/templates/index.html
+++ b/templates/index.html
@@ -194,36 +194,28 @@
 
 
 
-
-
             <div class="row">
-                <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
-
-                    <form class="form">
-
-                    
                 
-                    <div class="form-group">
-                    
-                    <input type="hidden" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
-                     
-          
+            
+                <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
+                    <a href="{% url 'template1' %}">
                     <div class="web-service-block">
                         <i class="ti-light-bulb"></i>
                         <h3>Creative Design</h3>
                         <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
                     </div>
-
-
+                </a>
                 </div>
-                    
-                </div>
+            
+           
                 <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
+                    <a href="{% url 'template2' %}">
                     <div class="web-service-block">
                         <i class="ti-desktop"></i>
                         <h3>Web Development</h3>
                         <p>Afraid we praise lively he suffer family estate is. Ample order up in of in ready. Timed blind had .</p>
                     </div>
+                </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
                     <div class="web-service-block">
