--- a/templates/resume/template1.html
+++ b/templates/resume/template1.html
@@ -63,7 +63,7 @@
 
                 <ul>
                   <li class="ad">{{object.address}}</li>
-                  <li class="mail">johnsmith@business.com</li>
+                  <!-- <li class="mail">johnsmith@business.com</li> -->
                   <li class="tel">{{object.phone}}</li>
                   <li class="web">{{object.date_of_birth}}</li>
                 </ul>
