--- a/templates/resume/sign_up.html
+++ b/templates/resume/sign_up.html
@@ -50,7 +50,29 @@
     </p>
    </div>
    <div class="form-group">
-    <label for="name">
+    <label for="firstname">
+     First Name
+     <span>
+      *
+     </span>
+    </label>
+    <input id="firstname" name="firstname" type="text"/>
+    <div class="error" id="name__error">
+    </div>
+   </div>
+   <div class="form-group">
+    <label for="lastname">
+     Last Name
+     <span>
+      *
+     </span>
+    </label>
+    <input id="lastname" name="lastname" type="text"/>
+    <div class="error" id="name__error">
+    </div>
+   </div>
+   <div class="form-group">
+    <label for="username">
      Username
      <span>
       *
@@ -60,7 +82,7 @@
     <div class="error" id="name__error">
     </div>
    </div>
-   <div class="form-group">
+   <!-- <div class="form-group">
     <label for="email">
      Email
      <span>
@@ -70,7 +92,7 @@
     <input id="email" name="email" type="email"/>
     <div class="error" id="name__error">
     </div>
-   </div>
+   </div> -->
    <div class="form-group">
     <label for="password">
      Password
