--- a/templates/resume/sign_up.html
+++ b/templates/resume/sign_up.html
@@ -57,7 +57,7 @@
      </span>
     </label>
     <input id="firstname" name="firstname" type="text"/>
-    <div class="error" id="name__error">
+    <div class="error" id="name_error">
     </div>
    </div>
    <div class="form-group">
@@ -68,7 +68,7 @@
      </span>
     </label>
     <input id="lastname" name="lastname" type="text"/>
-    <div class="error" id="name__error">
+    <div class="error" id="name_error">
     </div>
    </div>
    <div class="form-group">
@@ -101,6 +101,15 @@
      </span>
     </label>
     <input id="password" name="password" type="password"/>
+   </div>
+   <div class="form-group">
+    <label for="email">
+     Email
+     <span>
+      *
+     </span>
+    </label>
+    <input id="email" name="email" type="email"/>
    </div>
    <div class="line-break">
    </div>
