--- a/templates/resume/thank-you.html
+++ b/templates/resume/thank-you.html
@@ -37,7 +37,7 @@
                          </span>
                         </label>
                         <input id="firstname" name="firstname" type="text"/>
-                        <div class="error" id="name__error">
+                        <div class="error" id="name_error">
                         </div>
                        </div>
                        <div class="form-group">
@@ -48,7 +48,7 @@
                          </span>
                         </label>
                         <input id="lastname" name="lastname" type="text"/>
-                        <div class="error" id="name__error">
+                        <div class="error" id="name_error">
                         </div>
                        </div>
                        <div class="form-group">
@@ -59,7 +59,7 @@
                          </span>
                         </label>
                         <input id="username" name="username" type="text"/>
-                        <div class="error" id="name__error">
+                        <div class="error" id="name_error">
                         </div>
                        </div>
                        <!-- <div class="form-group">
@@ -81,6 +81,15 @@
                          </span>
                         </label>
                         <input id="password" name="password" type="password"/>
+                       </div>
+                       <div class="form-group">
+                        <label for="email">
+                         Email
+                         <span>
+                          *
+                         </span>
+                        </label>
+                        <input id="email" name="email" type="email"/>
                        </div>
                        <div class="line-break">
                        </div>
@@ -105,7 +114,7 @@
         </p> -->
         <p class="lead">
           <!-- <a class="btn btn-primary btn-sm" href="https://bootstrapcreative.com/" role="button">Continue to homepage</a> -->
-        <!-- Button trigger modal -->
+        <!-- Button trigger modal -->   
       <button type="button" class="btn btn-primary btn-sm" id="modal" data-toggle="modal" data-target="#modelId">
         Sign Up/Sign In
       </button>
